# rubik

./: README.md  solution.txt
src/arm/: ArmBase.cpp  ArmBase.h
src/manipulation_rubik/: CMakeLists.txt  README.md  package.xml
src/manipulation_rubik/doc/brain/: CMakeLists.txt
src/manipulation_rubik/doc/brain/src/: brain.cpp
src/manipulation_rubik/doc/eyes/: CMakeLists.txt  photoProcess.py
src/manipulation_rubik/doc/eyes/photos_processed/: Behind.txt  Bottom.txt  Front.txt  Left.txt  Right.txt  Top.txt  test.txt  top.txt
src/manipulation_rubik/doc/eyes/src/: eyes.cpp
src/manipulation_rubik/doc/logic/: CMakeLists.txt  input.lp  rubik.lp  rubik_base.lp
src/manipulation_rubik/doc/logic/hanoi/: hanoi.lp
src/manipulation_rubik/doc/logic/src/: logic.cpp
src/manipulation_rubik/doc/rubik_right/: CMakeLists.txt
src/manipulation_rubik/doc/rubik_right/src/: rubik_right_move.cpp
src/manipulation_rubik/msg/: CubeDto.msg  MoveConfiguration.msg
src/manipulation_rubik/srv/: LeaveObject.srv  LfMoveLeft.srv  MoveGripper.srv  ResolveConfiguration.srv  Rotate.srv  RotateCube.srv  RubikCubies.srv  RubikFace.srv  RubikFaceDetect.srv  StartProcess.srv
src/panda_rubik_config/: CMakeLists.txt  package.xml
src/panda_rubik_config/config/: dual_panda.srdf.xacro  dual_panda_controllers.yaml  fake_controllers.yaml  hand.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  panda_arm_hand.xacro  panda_controllers.yaml  panda_gripper_controllers.yaml
src/panda_rubik_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_chomp.launch  dual_panda_moveit_controller_manager.launch.xml  dual_panda_real.launch  moveit.rviz  (+21 more)
(+1 files in other folders)
